before change section

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,6 +13,12 @@ ul, ol, dl {
   padding: 0
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font-family: $font;
 }
@@ -201,6 +207,19 @@ main {
   background-repeat: no-repeat;
   background-attachment: fixed;
   color: white;
+
+  .contact-list {
+    grid-row: 3 / span 3;
+    grid-column: 3 / span 16;
+    font-size: 1.5rem;
+    font-family: $font-slab;
+
+    li:before {
+      content: "\002022";
+      color: $orange;
+      padding-right: 1rem;
+    }
+  }
 }
 
 .map {
