--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,11 +1,22 @@
 <section class="contact common-section">
   <article>
     <header class="common-header">
-      Where to find us
+      Contact
     </header>
     <div class="description">
       Rem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididamco
     </div>
     <i class="icon"></i>
+
+    <ul class="contact-list">
+      Zapraszamy do naszego warsztatu samochodowego:
+      <li>Zor Auto</li>
+      <li>Mościska, ul. 3-go Maja 28</li>
+      <li>05-080 Izabelin​</li>
+      <li>Tel./fax 22-750-37-21</li>
+      <li>Tel. kom. 721-202-402​</li>
+    </ul>
+
+    </div>
   </article>
 </section>
