--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,22 +1,25 @@
 <section class="contact common-section">
-  <article>
-    <header class="common-header">
-      Contact
-    </header>
-    <div class="description">
-      Rem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididamco
-    </div>
-    <i class="icon"></i>
-
-    <ul class="contact-list">
-      Zapraszamy do naszego warsztatu samochodowego:
-      <li>Zor Auto</li>
-      <li>Mościska, ul. 3-go Maja 28</li>
-      <li>05-080 Izabelin​</li>
-      <li>Tel./fax 22-750-37-21</li>
-      <li>Tel. kom. 721-202-402​</li>
-    </ul>
-
+  <article class="full-width">
+    <img class="contact-img"/>
+    <div class="contact-description">
+      <header>
+        Contact
+      </header>
+      <div class="subheader">
+        Zapraszamy do naszego wartsztatu
+      </div>
+      <img/>
+      <ul class="contact-list">
+        <li>Mościska, ul. 3-go Maja 28</li>
+        <li>05-080 Izabelin​</li>
+        <li>Tel. kom. 721-202-402​</li>
+      </ul>
+      <div class="directions">
+        <p class="subheader">Jak do nas dojechać?</p>
+        <p>Warsztat znajduje się około 500m od drogi Wolbrom - Miechów
+          <br>
+        Jadąc nią skręć na skrzyżowaniu do Szreniawy, a później kieruj się w stronę kościoła</p>
+      </div>
     </div>
   </article>
 </section>
