--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,8 +1,9 @@
 <nav class="menu">
   <ul>
-    <li class="menu-item">Strona główna</li>
-    <li class="menu-item">Usługi</li>
-    <li class="menu-item">O Nas</li>
-    <li class="menu-item">Kontakt</li>
+    <li class="menu-item"><a>Home</a></li>
+    <li class="menu-item"><a>Services</a></li>
+    <li class="menu-item"><a>About Us</a></li>
+    <li class="menu-item"><a>Benefits</a></li>
+    <li class="menu-item"><a>Contact</a></li>
   </ul>
 </nav>
