--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,10 +13,13 @@ ul, ol, dl {
   padding: 0
 }
 
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+a {
+  cursor: pointer;
+
+  &:hover {
+    transition: all 0.3s ease-in;
+    opacity: 0.6;
+  }
 }
 
 body {
@@ -26,7 +29,7 @@ body {
 main {
   display: grid;
   grid-template-columns: repeat(20, 1fr);
-  grid-template-rows: 95vh 95vh 70vh 70vh 90vh 50vh;
+  grid-template-rows: 95vh 95vh 70vh 70vh 70vh 50vh;
 }
 
 .common-section {
@@ -147,13 +150,12 @@ main {
     header {
       grid-column: 2 / span 3;
       grid-row: span 1;
-      align-self: center;
       color: white;
     }
 
     .subheader, p, img {
       grid-column: 2 / span 3;
-      grid-row: span 1;
+      grid-row: span 2;
     }
 
     p, img {
@@ -174,15 +176,6 @@ main {
     background-repeat: no-repeat;
     background-size: cover;
   }
-  .about-header {
-    grid-column: 1 / span 11;
-    grid-row: 1 / span 4;
-  }
-
-  .about-subheader {
-    grid-column: 1 / span 11;
-    grid-row: 4 / span 7;
-  }
 }
 
 .benefits {
@@ -200,7 +193,7 @@ main {
   }
 }
 
-.contact {
+/*.contact {
   grid-row: 5;
   background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('../images/road2.jpg');
   background-position: center top;
@@ -220,6 +213,84 @@ main {
       padding-right: 1rem;
     }
   }
+}*/
+
+
+.contact {
+  background-color: #1c1c18;
+  color: white;
+
+  .contact-description {
+    grid-column: 11 / span 10;
+    grid-row: 2 / span 7;
+    display: grid;
+    grid-template-columns: 1fr 7fr;
+    grid-template-rows: repeat(7, 1fr);
+    color: rgba(255, 255, 255, 0.5);
+    padding-right: 20px;
+
+    .subheader {
+      width: 65%;
+      font-size: 1rem;
+      grid-column: 2 / span 3;
+      grid-row: 2 / span 1;
+    }
+
+    header {
+      grid-column: 2 / span 3;
+      grid-row: span 1;
+      color: white;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    p, ul, img {
+      font-size: 0.875rem;
+    }
+
+    img {
+      grid-column: 2 / span 3;
+      grid-row: 2 / span 1;
+    }
+
+    .contact-list {
+      grid-row: 3 / span 2;
+      grid-column: 2 / span 1;
+
+      li {
+        margin-bottom: 1rem;
+      }
+
+      li:before {
+        content: "\002022";
+        color: $orange;
+        padding-right: 1rem;
+      }
+    }
+
+    .directions {
+      margin-top: 2rem;
+      grid-column: 2 / span 1;
+      grid-row: 4 / span 2;
+
+      .subheader {
+        margin-bottom: 1.5rem;
+      }
+    }
+  }
+
+  .contact-img {
+    grid-column: 1 / span 10;
+    grid-row: 1 / span 7;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/road2.jpg');
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 
 .map {
@@ -228,5 +299,46 @@ main {
   #embeded-map {
     grid-column: 1 / span 20;
     grid-row: 1 / span 6;
+  }
+}
+
+footer {
+  background-color: #2e2925;
+  padding: 80px 0;
+  min-height: 90px;
+
+  .footer-container {
+    display: grid;
+    grid-template-columns: 13fr 7fr;
+    grid-template-rows: 1fr 1fr;
+    max-width: 72rem;
+    margin: 0 auto;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 0.75rem;
+
+    .footer-menu {
+      grid-column: 1;
+      grid-row: span 1;
+      width: 100%;
+
+      ul {
+        list-style: none;
+      }
+
+      .item {
+        display: inline-block;
+        width: 100px;
+      }
+    }
+
+    .copyright {
+      grid-column: 1;
+      grid-row: span 2;
+    }
+
+    .logo {
+      grid-column: 2;
+      grid-row: 1 / span 2;
+    }
   }
 }
