before grid changes

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,11 +5,10 @@
         About Our Company
       </header>
       <div class="subheader">Rem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididun</div>
-      <img/>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborisr sit amet, consectetur adipisicing magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborisr sit amet, consectetur   quis nostrud exercitation ullamco laborisr sit amet, consectetur adipisicing magna aliqua. Ut enim ad minim veniam, quis nostr</p>
       <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation  veniam, quis ud exercitation</p>
     </div>
-    <img class="about-img"/>
+    <div class="about-img"></div>
       <!--<header class="about-header">
         About Our Company
       </header>
