--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,6 +1,6 @@
 <section class="contact common-section">
   <article class="full-width">
-    <img class="contact-img"/>
+    <div class="contact-img"></div>
     <div class="contact-description">
       <header>
         Contact
@@ -8,7 +8,6 @@
       <div class="subheader">
         Zapraszamy do naszego wartsztatu
       </div>
-      <img/>
       <ul class="contact-list">
         <li>Mościska, ul. 3-go Maja 28</li>
         <li>05-080 Izabelin​</li>
