--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -10,6 +10,6 @@
     <p class="copyright">
       &copy; 2017 Paweł Płoszaj
     </p>
-    <img class="logo"/>
+    <div class="logo"></div>
   </div>
 </footer>
