--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -98,6 +98,7 @@ main {
   background-position: center top;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover;
   color: white;
   grid-row: 1;
 
@@ -286,7 +287,7 @@ main {
   .contact-img {
     grid-column: 1 / span 10;
     grid-row: 1 / span 7;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/road2.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../images/signpost.jpg');
     background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
